--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,16 +8,16 @@ services:
       - ./data/db:/data/db
       - ./data/configdb:/data/configdb
     
-  kraken:
-    image: parhamjf/kraken-test:development
-    container_name: kraken-test
+  crypto:
+    image: parhamjf/crypto-test:development
+    container_name: crypto-test
     working_dir: /app
     command: npm start
     depends_on: 
         - mongodb
     environment: 
         - DB_HOST=mongodb:27017
-        - DB_NAME=kraken
+        - DB_NAME=crypto
         - DB_COLLECTION=transactions
     volumes:
         - ./:/app/output
